Temporary scrollbar fix

--- a/_sass/_custom-styles.scss
+++ b/_sass/_custom-styles.scss
@@ -1,3 +1,7 @@
+body {
+	overflow-x: hidden;
+}
+
 h2 {
 	@extend .mt-5;
 	@extend .mb-4;
